--- a/package.json
+++ b/package.json
@@ -1,24 +1,38 @@
 {
-  "name": "projeto",
+  "name": "api-rest-client",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "yarn ts-node-dev ./src/server/Server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "yarn ts-node-dev ./src/index.ts",
+    "test": "jest",
+    "production": "node ./build/index.js",
+    "postinstall": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "knex": "^3.1.0"
+    "http-status-codes": "^2.3.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.5",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.4.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "nodemon": "^3.1.3",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
+    "@eslint/js": "^9.4.0",
+    "@types/supertest": "^6.0.2",
+    "eslint": "^8.57.0",
+    "globals": "^15.4.0",
+    "supertest": "^7.0.0",
+    "typescript-eslint": "^7.13.0"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
