--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
     "jest": "^29.7.0",
+    "knex": "^3.1.0",
     "ts-jest": "^29.1.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5",
@@ -29,10 +30,11 @@
     "@types/supertest": "^6.0.2",
     "eslint": "^8.57.0",
     "globals": "^15.4.0",
+    "sqlite": "^5.1.1",
     "supertest": "^7.0.0",
     "typescript-eslint": "^7.13.0"
   },
   "engines": {
-    "node": "16.x"
+    "node": "20.x"
   }
 }
