--- a/package.json
+++ b/package.json
@@ -17,25 +17,27 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
-    "jest": "^29.7.0",
     "knex": "^3.1.0",
-    "ts-jest": "^29.1.5",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5",
+    "sqlite3": "^5.1.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/supertest": "^6.0.2",
     "eslint": "^8.57.0",
     "globals": "^15.4.0",
-    "sqlite3": "^5.1.7",
+    "jest": "^29.7.0",
     "supertest": "^7.0.0",
+    "ts-jest": "^29.1.5",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.5.2",
     "typescript-eslint": "^7.13.0"
   },
   "engines": {
